feat(Swagger): Add documentation
